[package]
name = "clipboard-share-client"
version = "0.1.0"
authors = ["2lovecode <liu546hao@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { features = ["canvas", "tokio", "debug"] }
chrono = "0.4"
clipboard = "0.5.0"
reqwest = { features = ["json"] }
tokio = { features = ["full"] }