[package]
name = "clipboard-share-client"
version = "0.1.0"
authors = ["2lovecode <liu546hao@163.com>"]
edition = "2018"
resolver="2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = {version="0.6", features = ["tokio", "debug"]}
iced_native = { version="0.7" }
iced_futures = { version="0.5" }
once_cell = "1.15"
async-tungstenite = {version="0.16", features = ["tokio-rustls-webpki-roots"]}
tokio = {version="1", features = ["full"]}
warp = {version="0.3"}
cli-clipboard = { version="0.4.0"}
chrono = {version="0.4.23"}
iced_graphics = {version="0.5.0", features = [ "font-source" ]}
tauri-hotkey = "0.1.2"
enigo = "0.0.14"